--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
               <button class="btn ghost" type="button" id="gb-clear">清空本地留言</button>
               <button class="btn ghost" type="button" id="gb-export">导出为 JSON</button>
             </div>
-            <p class="note">提示：留言仅保存在您浏览器本地（localStorage）。如需上线收集，请接入表单服务或数据库。</p>
+            <p class="note">提示：留言将实时提交到云端数据库，所有宾客可见。</p>
           </div>
         </form>
       </div>
@@ -308,51 +308,46 @@
     rerenderCountdown();
     setInterval(rerenderCountdown, 1000);
 
-    // ===== Guestbook (localStorage) =====
-    const KEY = 'wedding_guestbook_v1';
-    function getMessages(){
-      try{ return JSON.parse(localStorage.getItem(KEY)) || []; }catch(e){ return []; }
+    // ===== Guestbook (Netlify Functions) =====
+    async function fetchMessages() {
+      const res = await fetch('/.netlify/functions/guestbook-list');
+      return res.ok ? await res.json() : [];
     }
-    function setMessages(list){ localStorage.setItem(KEY, JSON.stringify(list)); }
-    function renderMessages(){
+    async function submitMessage(data) {
+      const res = await fetch('/.netlify/functions/submit-guestbook', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(data)
+      });
+      return await res.json();
+    }
+    function escapeHtml(s){ return s.replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#039;'}[c])); }
+    async function renderMessages() {
       const host = document.getElementById('gb-list');
-      const list = getMessages().sort((a,b)=> b.time - a.time);
+      host.innerHTML = '<p class="note">加载中...</p>';
+      const list = await fetchMessages();
       if(!list.length){ host.innerHTML = '<p class="note">目前还没有留言，快来写下第一条祝福吧！</p>'; return; }
       host.innerHTML = list.map(m=> `
         <div class="msg">
-          <strong>${m.name}</strong> <span class="note">· ${new Date(m.time).toLocaleString()}</span>
-          <div>${escapeHtml(m.msg).replace(/\n/g,'<br/>')}</div>
-          ${m.attend ? '<div class="pill" style="margin-top:8px;display:inline-block">出席</div>' : ''}
+          <strong>${escapeHtml(m.name)}</strong> <span class="note">· ${new Date(m.created_at).toLocaleString()}</span>
+          <div>${escapeHtml(m.message).replace(/\n/g,'<br/>')}</div>
+          ${m.attending ? '<div class="pill" style="margin-top:8px;display:inline-block">出席</div>' : ''}
         </div>
       `).join('');
     }
-    function escapeHtml(s){ return s.replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#039;'}[c])); }
-
-    document.getElementById('gb-form').addEventListener('submit', e=>{
+    document.getElementById('gb-form').addEventListener('submit', async e=>{
       e.preventDefault();
       const name = document.getElementById('gb-name').value.trim();
-      const msg  = document.getElementById('gb-msg').value.trim();
-      const attend = document.getElementById('gb-attend').checked;
-      if(!name || !msg){ alert('请填写名字与留言'); return; }
-      const list = getMessages();
-      list.push({name, msg, attend, time: Date.now()});
-      setMessages(list);
-      (e.target).reset();
-      renderMessages();
-    });
-    document.getElementById('gb-clear').addEventListener('click', ()=>{
-      if(confirm('确定要清空本地留言吗？此操作只影响本设备浏览器。')){
-        localStorage.removeItem(KEY);
+      const message  = document.getElementById('gb-msg').value.trim();
+      const attending = document.getElementById('gb-attend').checked;
+      if(!name || !message){ alert('请填写名字与留言'); return; }
+      const result = await submitMessage({name, message, attending});
+      if(result.success){
+        e.target.reset();
         renderMessages();
+      }else{
+        alert('提交失败：' + (result.error || '未知错误'));
       }
-    });
-    document.getElementById('gb-export').addEventListener('click', ()=>{
-      const blob = new Blob([JSON.stringify(getMessages(), null, 2)], {type:'application/json'});
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement('a');
-      a.href = url; a.download = 'guestbook.json';
-      document.body.appendChild(a); a.click(); a.remove();
-      URL.revokeObjectURL(url);
     });
     renderMessages();
   </script>
