--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
       </div>
       <div class="card">
-        <img alt="hero" src="head.jpg" />
+        <img alt="hero" src="images/head.jpg" />
       </div>
     </div>
     <div class="ring"></div>
