--- a/index.html
+++ b/index.html
@@ -365,16 +365,16 @@
     // ===== AMap for wedding schedule =====
     window.onload = function() {
       var map = new AMap.Map('amap2', {
-        center: [106.2347, 38.4877], // 银川立达深杭国际酒店经纬度
+        center: [106.234963, 38.487633], // 银川立达深杭国际酒店高德精确坐标
         zoom: 15
       });
       var marker = new AMap.Marker({
-        position: [106.2347, 38.4877],
+        position: [106.234963, 38.487633],
         title: '银川立达深杭国际酒店'
       });
       map.add(marker);
       marker.on('click', function() {
-        window.open('https://uri.amap.com/navigation?to=106.2347,38.4877,银川立达深杭国际酒店', '_blank');
+        window.open('https://uri.amap.com/navigation?to=106.234963,38.487633,银川立达深杭国际酒店', '_blank');
       });
     }
   </script>
