--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@
     <h2>新郎 · 新娘</h2>
     <div class="container couple">
       <div class="card person">
-        <div class="avatar"><img src="https://images.unsplash.com/photo-1519340241574-2cec6aef0c01?q=80&w=800&auto=format&fit=crop" alt="Groom"/></div>
+        <div class="avatar"><img src="images/touxiang2.jpg" alt="groom"/></div>
         <div>
           <h3>新郎 · <span id="groom-name">张鑫</span></h3>
           <blockquote>“我有三样东西不可或缺：水、空气，以及右边那个女孩。”</blockquote>
         </div>
       </div>
       <div class="card person">
-        <div class="avatar"><img src="https://images.unsplash.com/photo-1530023367847-a683933f4177?q=80&w=800&auto=format&fit=crop" alt="Bride"/></div>
+        <div class="avatar"><img src="images/touxiang2.jpg" alt="Bride"/></div>
         <div>
           <h3>新娘 · <span id="bride-name">贾玉洁</span></h3>
           <blockquote>“我有三样东西不可或缺：水、空气，以及左边那个男孩。”</blockquote>
