--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       </div>
       <div class="cta">
         <a class="btn" href="#schedule">查看婚礼安排</a>
-        <a class="btn ghost" href="#guestbook">签个到 & 留言</a>
+        <a class="btn ghost" href="#guestbook">爱的碎碎念</a>
       </div>
     </div>
     <div class="card">
@@ -241,7 +241,7 @@
 </section>
 
 <section id="guestbook" class="section">
-  <h2>宾客留言</h2>
+  <h2>爱的碎碎念</h2>
   <div class="container guestbook">
     <div class="card">
       <form id="gb-form" autocomplete="off">
