--- a/index.html
+++ b/index.html
@@ -149,14 +149,14 @@
       <div class="avatar"><img src="images/touxiang2.jpg" alt="groom"/></div>
       <div>
         <h3>新郎 · <span id="groom-name">张鑫</span></h3>
-        <blockquote>“我有三样东西不可或缺：水、空气，以及右边那个女孩。”</blockquote>
+        <blockquote>“我有三样东西不可或缺：水、空气，以及下边那个女孩。”</blockquote>
       </div>
     </div>
     <div class="card person">
       <div class="avatar"><img src="images/touxiang2.jpg" alt="Bride"/></div>
       <div>
         <h3>新娘 · <span id="bride-name">贾玉洁</span></h3>
-        <blockquote>“我有三样东西不可或缺：水、空气，以及左边那个男孩。”</blockquote>
+        <blockquote>“我有三样东西不可或缺：水、空气，以及上边那个男孩。”</blockquote>
       </div>
     </div>
   </div>
