--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>张鑫 & 贾玉洁 的婚礼邀请 | 2025.10.01 银川立达深杭国际酒店</title>
+  <title>LoveTrace</title>
   <meta name="description" content="张鑫和贾玉洁的婚礼邀请函，2025年10月1日在银川立达深杭国际酒店举行。诚邀亲友见证我们的爱情，分享我们的幸福时刻。" />
   <meta name="keywords" content="张鑫,贾玉洁,婚礼,结婚,银川,立达深杭国际酒店,2025,邀请函,爱情故事" />
   <meta name="author" content="张鑫 & 贾玉洁" />
@@ -326,12 +326,6 @@
         <a class="btn" href="#schedule">查看婚礼安排</a>
         <a class="btn ghost" href="#guestbook">爱的碎碎念</a>
       </div>
-      <div class="share-buttons fade-in">
-        <button class="share-btn wechat" onclick="shareToWechat()">📱 微信分享</button>
-        <button class="share-btn weibo" onclick="shareToWeibo()">📢 微博分享</button>
-        <button class="share-btn copy" onclick="copyLink()">📋 复制链接</button>
-        <button class="share-btn qr" onclick="showQR()">📱 生成二维码</button>
-      </div>
     </div>
     <div class="card scale-in">
       <img alt="hero" src="images/head.jpg" class="clickable" loading="lazy" />
@@ -459,6 +453,10 @@
     </div>
   </div>
 </section>
+<div class="share-buttons fade-in">
+  <button class="share-btn copy" onclick="copyLink()">📋 复制链接</button>
+  <button class="share-btn qr" onclick="showQR()">📱 生成二维码</button>
+</div>
 
 <footer>
   <div class="container">
