--- a/index.html
+++ b/index.html
@@ -381,22 +381,8 @@
         <p>在亲友的见证下，我们许下携手一生的承诺。</p>
       </div>
       <div class="tl-img">
-        <video
-                autoplay
-                muted
-                loop
-                playsinline
-                webkit-playsinline
-                x5-video-player-type="h5-page"
-                class="responsive-video clickable"
-                preload="metadata"
-        >
-          <source src="video/ding.mp4" type="video/mp4">
-          <source src="video/ding.webm" type="video/webm">
-          您的浏览器不支持视频播放。
-        </video>
+        <video src="video/ding.mp4" autoplay muted loop class="responsive-video clickable" loading="lazy"></video>
       </div>
-
     </div>
     <div class="tl fade-in">
       <div class="tl-card">
@@ -404,22 +390,8 @@
         <p>一纸证书，一生约定，我们正式成为彼此的家人。</p>
       </div>
       <div class="tl-img">
-        <video
-                autoplay
-                muted
-                loop
-                playsinline
-                webkit-playsinline
-                x5-video-player-type="h5-page"
-                class="responsive-video clickable"
-                preload="metadata"
-        >
-          <source src="video/zheng.mp4" type="video/mp4">
-          <source src="video/zheng.webm" type="video/webm">
-          您的浏览器不支持视频播放。
-        </video>
+        <video src="video/zheng.mp4" autoplay muted loop class="responsive-video clickable" loading="lazy"></video>
       </div>
-
     </div>
     <div class="tl fade-in">
       <div class="tl-card">
