--- a/index.html
+++ b/index.html
@@ -390,7 +390,20 @@
         <p>一纸证书，一生约定，我们正式成为彼此的家人。</p>
       </div>
       <div class="tl-img">
-        <video src="video/zheng.mp4" autoplay muted loop class="responsive-video clickable" loading="lazy"></video>
+        <video
+                id="myVideo"
+                autoplay
+                muted
+                loop
+                playsinline
+                webkit-playsinline
+                x5-video-player-type="h5-page"
+                class="responsive-video clickable"
+                preload="auto"
+        >
+          <source src="video/zheng.mp4" type="video/mp4">
+          您的浏览器不支持视频播放。
+        </video>
       </div>
     </div>
     <div class="tl fade-in">
