--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
       </div>
     </div>
     <div class="card scale-in">
-      <img alt="hero" src="images/head.jpg" class="clickable" loading="lazy" />
+      <img alt="hero" src="http://t25q1354o.hb-bkt.clouddn.com/head.jpg" class="clickable" loading="lazy" />
     </div>
   </div>
   <div class="ring"></div>
@@ -486,14 +486,14 @@
   <h2 class="fade-in">命中注定的两个人</h2>
   <div class="container couple">
     <div class="card person slide-in-left">
-      <div class="avatar"><img src="images/touxiang2.jpg" alt="groom" class="clickable" loading="lazy"/></div>
+      <div class="avatar"><img src="http://t25q1354o.hb-bkt.clouddn.com/touxiang2.jpg" alt="groom" class="clickable" loading="lazy"/></div>
       <div>
         <h3>新郎 · <span id="groom-name">张鑫</span></h3>
         <blockquote>"我有三样东西不可或缺：水、空气，以及下边那个女孩。"</blockquote>
       </div>
     </div>
     <div class="card person slide-in-right">
-      <div class="avatar"><img src="images/touxiang2.jpg" alt="Bride" class="clickable" loading="lazy"/></div>
+      <div class="avatar"><img src="http://t25q1354o.hb-bkt.clouddn.com/touxiang2.jpg" alt="Bride" class="clickable" loading="lazy"/></div>
       <div>
         <h3>新娘 · <span id="bride-name">贾玉洁</span></h3>
         <blockquote>"我有三样东西不可或缺：水、空气，以及上边那个男孩。"</blockquote>
@@ -511,7 +511,7 @@
         <p>一次回眸，一个笑容，一切就此开始。</p>
       </div>
       <div class="tl-img">
-        <img src="images/first.jpg" alt="meet" class="big-photo clickable" loading="lazy"/>
+        <img src="http://t25q1354o.hb-bkt.clouddn.com/first.jpg" alt="meet" class="big-photo clickable" loading="lazy"/>
       </div>
     </div>
     <div class="tl fade-in">
@@ -520,7 +520,7 @@
         <p>旅行、电影、深夜长谈，我们把彼此放进了生活的每一个角落。</p>
       </div>
       <div class="tl-img">
-        <img src="images/know.jpg" alt="know" class="big-photo clickable" loading="lazy"/>
+        <img src="http://t25q1354o.hb-bkt.clouddn.com/know.jpg" alt="know" class="big-photo clickable" loading="lazy"/>
       </div>
     </div>
     <div class="tl fade-in">
@@ -529,7 +529,7 @@
         <p>在亲友的见证下，我们许下携手一生的承诺。</p>
       </div>
       <div class="tl-img">
-        <video src="video/ding.mp4" autoplay muted loop class="responsive-video clickable" loading="lazy"></video>
+        <video src="http://t25q1354o.hb-bkt.clouddn.com/ding.mp4" autoplay muted loop class="responsive-video clickable" loading="lazy"></video>
       </div>
     </div>
     <div class="tl fade-in">
@@ -538,7 +538,7 @@
         <p>一纸证书，一生约定，我们正式成为彼此的家人。</p>
       </div>
       <div class="tl-img">
-        <video src="video/zheng.mp4" autoplay muted loop class="responsive-video clickable" loading="lazy"></video>
+        <video src="http://t25q1354o.hb-bkt.clouddn.com/zheng.mp4" autoplay muted loop class="responsive-video clickable" loading="lazy"></video>
       </div>
     </div>
     <div class="tl fade-in">
@@ -547,7 +547,7 @@
         <p>往后余生，不止有柴米油盐，还有浪漫和远方</p>
       </div>
       <div class="tl-img">
-        <img src="images/second.jpg" alt="keep" class="big-photo clickable" loading="lazy"/>
+        <img src="http://t25q1354o.hb-bkt.clouddn.com/second.jpg" alt="keep" class="big-photo clickable" loading="lazy"/>
       </div>
     </div>
   </div>
@@ -571,12 +571,12 @@
 <section id="gallery" class="section">
   <h2 class="fade-in">回响</h2>
   <div class="container gallery">
-    <img src="images/one.jpg" alt="g1" class="clickable fade-in" loading="lazy"/>
-    <img src="images/two.jpg" alt="g2" class="clickable fade-in" loading="lazy"/>
-    <img src="images/three.jpg" alt="g3" class="clickable fade-in" loading="lazy"/>
-    <img src="images/four.jpg" alt="g4" class="clickable fade-in" loading="lazy"/>
-    <img src="images/five.jpg" alt="g5" class="clickable fade-in" loading="lazy"/>
-    <img src="images/six.jpg" alt="g6" class="clickable fade-in" loading="lazy"/>
+    <img src="http://t25q1354o.hb-bkt.clouddn.com/one.jpg" alt="g1" class="clickable fade-in" loading="lazy"/>
+    <img src="http://t25q1354o.hb-bkt.clouddn.com/two.jpg" alt="g2" class="clickable fade-in" loading="lazy"/>
+    <img src="http://t25q1354o.hb-bkt.clouddn.com/three.jpg" alt="g3" class="clickable fade-in" loading="lazy"/>
+    <img src="http://t25q1354o.hb-bkt.clouddn.com/four.jpg" alt="g4" class="clickable fade-in" loading="lazy"/>
+    <img src="http://t25q1354o.hb-bkt.clouddn.com/five.jpg" alt="g5" class="clickable fade-in" loading="lazy"/>
+    <img src="http://t25q1354o.hb-bkt.clouddn.com/six.jpg" alt="g6" class="clickable fade-in" loading="lazy"/>
   </div>
 </section>
 
