--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
         <p>在亲友的见证下，我们许下携手一生的承诺。</p>
       </div>
       <div class="tl-img">
-        <video src="http://t25q1354o.hb-bkt.clouddn.com/ding.mp4" autoplay muted loop class="responsive-video clickable" loading="lazy"></video>
+        <video src="http://t25q1354o.hb-bkt.clouddn.com/ding.mp4"  muted  class="responsive-video clickable" loading="lazy"></video>
       </div>
     </div>
     <div class="tl fade-in">
@@ -538,7 +538,7 @@
         <p>一纸证书，一生约定，我们正式成为彼此的家人。</p>
       </div>
       <div class="tl-img">
-        <video src="http://t25q1354o.hb-bkt.clouddn.com/zheng.mp4" autoplay muted loop class="responsive-video clickable" loading="lazy"></video>
+        <video src="http://t25q1354o.hb-bkt.clouddn.com/zheng.mp4"  muted  class="responsive-video clickable" loading="lazy"></video>
       </div>
     </div>
     <div class="tl fade-in">
