--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
       </div>
     </div>
     <div class="card scale-in">
-      <img alt="hero" src="http://t25q1354o.hb-bkt.clouddn.com/head.jpg" class="clickable" loading="lazy" />
+      <img alt="hero" src="images/head.jpg" class="clickable" loading="lazy" />
     </div>
   </div>
   <div class="ring"></div>
@@ -486,14 +486,14 @@
   <h2 class="fade-in">命中注定的两个人</h2>
   <div class="container couple">
     <div class="card person slide-in-left">
-      <div class="avatar"><img src="http://t25q1354o.hb-bkt.clouddn.com/touxiang2.jpg" alt="groom" class="clickable" loading="lazy"/></div>
+      <div class="avatar"><img src="images/touxiang2.jpg" alt="groom" class="clickable" loading="lazy"/></div>
       <div>
         <h3>新郎 · <span id="groom-name">张鑫</span></h3>
         <blockquote>"我有三样东西不可或缺：水、空气，以及下边那个女孩。"</blockquote>
       </div>
     </div>
     <div class="card person slide-in-right">
-      <div class="avatar"><img src="http://t25q1354o.hb-bkt.clouddn.com/touxiang2.jpg" alt="Bride" class="clickable" loading="lazy"/></div>
+      <div class="avatar"><img src="images/touxiang2.jpg" alt="Bride" class="clickable" loading="lazy"/></div>
       <div>
         <h3>新娘 · <span id="bride-name">贾玉洁</span></h3>
         <blockquote>"我有三样东西不可或缺：水、空气，以及上边那个男孩。"</blockquote>
@@ -510,7 +510,7 @@
         <span class="pill">相遇</span>
         <p>一次回眸，一个笑容，一切就此开始。</p>
         <div class="tl-img">
-          <img src="http://t25q1354o.hb-bkt.clouddn.com/first.jpg" alt="meet" class="big-photo clickable" loading="lazy"/>
+          <img src="images/first.jpg" alt="meet" class="big-photo clickable" loading="lazy"/>
         </div>
       </div>
 
@@ -520,7 +520,7 @@
         <span class="pill">相知</span>
         <p>旅行、电影、深夜长谈，我们把彼此放进了生活的每一个角落。</p>
         <div class="tl-img">
-          <img src="http://t25q1354o.hb-bkt.clouddn.com/know.jpg" alt="know" class="big-photo clickable" loading="lazy"/>
+          <img src="images/know.jpg" alt="know" class="big-photo clickable" loading="lazy"/>
         </div>
       </div>
 
@@ -531,7 +531,7 @@
         <p>在亲友的见证下，我们许下携手一生的承诺。</p>
         <!-- 视频1 -->
         <div class="video-wrapper" data-src="http://t25q1354o.hb-bkt.clouddn.com/ding.mp4">
-          <img src="http://t25q1354o.hb-bkt.clouddn.com/cover1.jpg"
+          <img src="images/cover1.jpg"
                alt="订婚视频封面"
                style="width:100%;cursor:pointer;border-radius:12px;">
           <div class="play-button"
@@ -550,7 +550,7 @@
 
         <!-- 视频2 -->
         <div class="video-wrapper" data-src="http://t25q1354o.hb-bkt.clouddn.com/zheng.mp4">
-          <img src="http://t25q1354o.hb-bkt.clouddn.com/cover2.jpg"
+          <img src="images/cover2.jpg"
                alt="证婚视频封面"
                style="width:100%;cursor:pointer;border-radius:12px;">
           <div class="play-button"
@@ -566,7 +566,7 @@
         <span class="pill">相守</span>
         <p>往后余生，不止有柴米油盐，还有浪漫和远方</p>
         <div class="tl-img">
-          <img src="http://t25q1354o.hb-bkt.clouddn.com/second.jpg" alt="keep" class="big-photo clickable" loading="lazy"/>
+          <img src="images/second.jpg" alt="keep" class="big-photo clickable" loading="lazy"/>
         </div>
       </div>
 
@@ -592,12 +592,12 @@
 <section id="gallery" class="section">
   <h2 class="fade-in">回响</h2>
   <div class="container gallery">
-    <img src="http://t25q1354o.hb-bkt.clouddn.com/one.jpg" alt="g1" class="clickable fade-in" loading="lazy"/>
-    <img src="http://t25q1354o.hb-bkt.clouddn.com/two.jpg" alt="g2" class="clickable fade-in" loading="lazy"/>
-    <img src="http://t25q1354o.hb-bkt.clouddn.com/three.jpg" alt="g3" class="clickable fade-in" loading="lazy"/>
-    <img src="http://t25q1354o.hb-bkt.clouddn.com/four.jpg" alt="g4" class="clickable fade-in" loading="lazy"/>
-    <img src="http://t25q1354o.hb-bkt.clouddn.com/five.jpg" alt="g5" class="clickable fade-in" loading="lazy"/>
-    <img src="http://t25q1354o.hb-bkt.clouddn.com/six.jpg" alt="g6" class="clickable fade-in" loading="lazy"/>
+    <img src="images/one.jpg" alt="g1" class="clickable fade-in" loading="lazy"/>
+    <img src="images/two.jpg" alt="g2" class="clickable fade-in" loading="lazy"/>
+    <img src="images/three.jpg" alt="g3" class="clickable fade-in" loading="lazy"/>
+    <img src="images/four.jpg" alt="g4" class="clickable fade-in" loading="lazy"/>
+    <img src="images/five.jpg" alt="g5" class="clickable fade-in" loading="lazy"/>
+    <img src="images/six.jpg" alt="g6" class="clickable fade-in" loading="lazy"/>
   </div>
 </section>
 
