--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
   <meta name="keywords" content="张鑫,贾玉洁,婚礼,结婚,银川,立达深杭国际酒店,2025,邀请函,爱情故事" />
   <meta name="author" content="张鑫 & 贾玉洁" />
   <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph 基础标签 -->
+  <meta property="og:title" content="我们结婚啦 💖" />
+  <meta property="og:description" content="邀请您见证我们的幸福时刻，诚挚期待您的到来！" />
+  <meta property="og:image" content="https://yourdomain.com/images/wedding-cover.jpg" />
+  <meta property="og:url" content="https://yourdomain.com/" />
+  <meta property="og:type" content="website" />
+
+  <!-- 微信/QQ 也会参考 og 标签 -->
+  <!-- Twitter Card（可选，微信用不到，但其他平台可能用） -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="我们结婚啦 💖" />
+  <meta name="twitter:description" content="邀请您见证我们的幸福时刻，诚挚期待您的到来！" />
+  <meta name="twitter:image" content="https://yourdomain.com/images/wedding-cover.jpg" />
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
