--- a/index.html
+++ b/index.html
@@ -9,35 +9,23 @@
   <meta name="author" content="张鑫 & 贾玉洁" />
   <meta name="robots" content="index, follow" />
 
-  <!-- Open Graph 基础标签 -->
-  <meta property="og:title" content="我们结婚啦 💖" />
-  <meta property="og:description" content="邀请您见证我们的幸福时刻，诚挚期待您的到来！" />
-  <meta property="og:image" content="https://yourdomain.com/images/wedding-cover.jpg" />
-  <meta property="og:url" content="https://yourdomain.com/" />
-  <meta property="og:type" content="website" />
 
-  <!-- 微信/QQ 也会参考 og 标签 -->
-  <!-- Twitter Card（可选，微信用不到，但其他平台可能用） -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="我们结婚啦 💖" />
-  <meta name="twitter:description" content="邀请您见证我们的幸福时刻，诚挚期待您的到来！" />
-  <meta name="twitter:image" content="https://yourdomain.com/images/wedding-cover.jpg" />
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://your-domain.com/" />
+  <meta property="og:url" content="https://20250521jz20251001.xyz/" />
   <meta property="og:title" content="张鑫 & 贾玉洁 的婚礼邀请" />
   <meta property="og:description" content="诚邀亲友见证我们的爱情，2025年10月1日银川立达深杭国际酒店" />
-  <meta property="og:image" content="https://your-domain.com/images/head.jpg" />
+  <meta property="og:image" content="https://20250521jz20251001.xyz/images/head.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://your-domain.com/" />
+  <meta property="twitter:url" content="https://20250521jz20251001.xyz/" />
   <meta property="twitter:title" content="张鑫 & 贾玉洁 的婚礼邀请" />
   <meta property="twitter:description" content="诚邀亲友见证我们的爱情，2025年10月1日银川立达深杭国际酒店" />
-  <meta property="twitter:image" content="https://your-domain.com/images/head.jpg" />
+  <meta property="twitter:image" content="https://20250521jz20251001.xyz/images/head.jpg" />
   
   <meta name="theme-color" content="#F4CDE1"/>
   
